--- a/Tasbih/fonts.qrc
+++ b/Tasbih/fonts.qrc
@@ -6,5 +6,6 @@
         <file>Resources/Fonts/Roboto-Bold.ttf</file>
         <file>Resources/Fonts/Genome-Thin.otf</file>
         <file>Resources/Fonts/Consolas.ttf</file>
+        <file>Resources/Fonts/Early Times_light Demo.otf</file>
     </qresource>
 </RCC>
