--- a/Tasbih/ui.qrc
+++ b/Tasbih/ui.qrc
@@ -1,9 +1,11 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>Joystick.qml</file>
-        <file>Cell.qml</file>
-        <file>AndroidSlider.qml</file>
-        <file>LampCell.qml</file>
+        <file>Terminal.qml</file>
+        <file>BlinkChar.qml</file>
+        <file>SystemStatus.qml</file>
+        <file>WifiIndicator.qml</file>
+        <file>Switcher.qml</file>
+        <file>RoundButton.qml</file>
     </qresource>
 </RCC>
