--- a/Autism/GUI/ui.qrc
+++ b/Autism/GUI/ui.qrc
@@ -6,6 +6,6 @@
         <file>AndroidSlider.qml</file>
         <file>LampCell.qml</file>
         <file alias="mybutton.wav">Resources/mybutton.wav</file>
-        <file>settings.qml</file>
+        <file>Settings.qml</file>
     </qresource>
 </RCC>
