--- a/Rebound/ui.qrc
+++ b/Rebound/ui.qrc
@@ -1,11 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>Terminal.qml</file>
-        <file>BlinkChar.qml</file>
-        <file>SystemStatus.qml</file>
-        <file>WifiIndicator.qml</file>
-        <file>Switcher.qml</file>
-        <file>RoundButton.qml</file>
+        <file alias="RoundButton.qml">Qml/RoundButton.qml</file>
+        <file alias="Switcher.qml">Qml/Switcher.qml</file>
+        <file alias="SystemStatus.qml">Qml/SystemStatus.qml</file>
+        <file alias="Terminal.qml">Qml/Terminal.qml</file>
+        <file alias="WifiIndicator.qml">Qml/WifiIndicator.qml</file>
+        <file alias="main.qml">Qml/main.qml</file>
     </qresource>
 </RCC>
