--- a/Rebound/Scripts/Firefox/userChrome.css
+++ b/Rebound/Scripts/Firefox/userChrome.css
@@ -10,3 +10,9 @@
 	height: 0px !important;
 	margin-left: -12px !important;
 }
+
+#unified-extensions-button,
+#unified-extensions-button > .toolbarbutton-icon{
+	width: 0px !important;
+	padding: 0px !important;
+}
